# hotel-reservations-prediction

./: .env.example  .gitignore  Jenkinsfile  README.md  pyproject.toml  requirements.txt
config/: config.yaml  model_params.yaml
deploy/: Dockerfile
deploy/jenkins/: Dockerfile
docs/: architecture.md  deployment.md  installation.md  quickstart.md  training.md
notebook/: notebook.ipynb
src/app/: __init__.py  main.py
src/app/static/: style.css
src/app/templates/: index.html
src/hotel_prediction/: __init__.py  exception.py  logger.py
src/hotel_prediction/components/: __init__.py  data_ingestion.py  data_preprocessing.py  model_trainer.py
src/hotel_prediction/pipelines/: __init__.py  training_pipeline.py
src/hotel_prediction/utils/: __init__.py  io.py  ml_params.py
templates/: index.html
tests/: test_common.py
